[package]
name = "fuzz-path-to-error"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
honggfuzz = "0.5.55"
serde_json = "1.0.96"

[dependencies.serde_path_to_error]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"